# el-reward-calculator

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: gitleaks.yml  validators.yml
slot_infos/13_06_2025/: everstake_may_2025.csv  piertwo_may_2025.csv  slot_infos_13_06_2025_21_09_46.json  summary_piertwo_may_2025.txt
slot_infos/14_06_2025/: slot_infos_14_06_2025_08_57_28.json  slot_infos_14_06_2025_12_37_03.json  slot_infos_14_06_2025_12_37_17.json  slot_infos_14_06_2025_12_46_34.json  slot_infos_14_06_2025_12_52_22.json  slot_infos_14_06_2025_12_53_52.json  slot_infos_14_06_2025_12_55_13.csv  summary_14_06_2025_12_37_03.txt  summary_14_06_2025_12_42_59.txt  summary_14_06_2025_12_43_36.txt  summary_14_06_2025_12_46_34.txt  summary_14_06_2025_12_55_13.txt
slot_infos/15_06_2025/: slot_infos_15_06_2025_05_40_43.json
src/: lib.rs  main.rs
src/log_source/: commitboost_json.rs  commitboost_text.rs  common.rs  mevboost_json.rs  mevboost_text.rs  mod.rs  proposer_live.rs  stats_writer.rs  types.rs  vouch.rs
tests/: commitboost_text_tests.rs
