[package]
name = "el-reward-calculator"
version = "0.1.0"
edition = "2021"

[lib]
name = "el_reward_calculator"
path = "src/lib.rs"


[dependencies]
regex = "1.11.0"
lazy_static = "1.4.0"
url = "2.5.2"
chrono = "0.4.38"
decimal-percentage = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
web3-unit-converter = "0.1.0"
ethers = "2.0.14"
uuid = { version = "1.7", features = ["v4"]}
log = "0.4"
rust_decimal = { version = "1.34", features = ["serde"] }
rust_decimal_macros = "1.34"
once_cell = "1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time"] }
num-bigint = "0.4"
num-traits = "0.2"
